--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ghost-author-creator",
   "version": "0.1.0",
+  "homepage": "https://make-ghost-author.netlify.app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
