--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ghost Guest Author Creator",
+  "name": "Create guest authors for Ghost blogs without needing to invite staff users.",
   "icons": [
     {
       "src": "favicon.ico",
